# GEFF

./: .gitignore  AS_Setup.py  AddPath.sh  ClassingItUp.ipynb  CompareTwoRuns.ipynb  ComputeTensor.ipynb  ConstH.py  EoM.py  GEF.py  GEFClassic.py  GEFConstructorTest.ipynb  GEFSchwinger.py  GEFTestGround-Iterate-Copy1.ipynb  GEFTestGround-Iterate.ipynb  GEFTestGround.ipynb  GEFTestGround_Classic.ipynb  GEFTestGround_SE-1.ipynb  GEFTestGround_SE0.ipynb  GEFTestGround_SE1.ipynb  GEFTestGround_SEmix.ipynb  GEFv11.py  GEFv12.py  GEFv13.py  GEFv14.py  GEFv15.py  GEFv16.py  GEFv2.py  GEFv3.py  GEFv4.py  GEFv6.py  GEFv8.py  GEFv9.py  GetGWFromScratch.ipynb  GradientExpansionCode.ipynb  GradientExpansionCode_Dimless.ipynb  Input.py  LICENSE  MANIFEST.in  ModeByMode.ipynb  ModeSolver.ipynb  (+21 more)
.ipynb_checkpoints/: CompareTwoRuns_Classic-checkpoint.ipynb  GEFTestGround-Iterate-Copy1-checkpoint.ipynb  GEFTestGround-Iterate-checkpoint.ipynb  GEFTestGround_SE-1-checkpoint.ipynb  GEFTestGround_SE0-checkpoint.ipynb  GEFTestGround_SEmix-checkpoint.ipynb  GradientExpansionCode_Dimless-checkpoint.ipynb  ModeByMode-checkpoint.ipynb  ModeByModeClassic-checkpoint.ipynb  ModeByMode_Alt-checkpoint.ipynb  SolveNumericalZeta-checkpoint.ipynb  WhittakerPlayGround-Copy1-checkpoint.ipynb  WhittakerPlayGround-checkpoint.ipynb  source_prefac-checkpoint.ipynb
Common/: ComputeTensor.ipynb  ExampleGEFFile.py  GEFConstructor.py  GEFConstructorTest.ipynb  PlotSC.py  TensorPowerSpec.py
ConstH/: RunConstH.py
Debug/: Benchmark.py  GEFDebug.py  MbMDebug.py
GEFClassic/: GEFClassic.py  GEFTestGround_Classic.ipynb  ModeByModeClassic.py  ModeSolverClassic.ipynb
GEFSchwinger/: GEFSchwinger.py  GEFTestGround_SE-1.ipynb  GEFTestGround_SE0.ipynb  GEFTestGround_SEmix.ipynb  ModeByModeOld.py  ModeByModeSchwinger.ipynb  ModeByModeSchwinger.py  ModeSolverSchwinger.ipynb
Models/: Classic.py  SEOld.py
Notebooks/: CompareTwoRuns_Classic.ipynb  GradientExpansionCode_Dimless.ipynb  GradientExpansionCode_Dimless_kh_Rscale.ipynb  ModeByMode-Copy1.ipynb  ModeByMode.ipynb  ModeByModeClassic.ipynb  ModeByMode_Alt.ipynb  PlotResults.ipynb  PlottingRevenge.ipynb  SolveNumericalZeta.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  WhittakerPlayGround.ipynb  source_prefac.ipynb
Outdated/: GEFSchwinger.py
Tests/: CompareToPtarcade.py
docs/: geff.html  (+2 more)
(+177 files in other folders)
