[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GEFF"
version = "0.1.0"
description = "The GEFF allows simulating gauge-field production during inflation using the gradient expansion formalism."
readme = "README.md"

authors = [
  { name = "Richard von Eckardstein", email = "richard.voneckardstein@hotmail.com" }
]

license = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
  "scipy>=1.15.0",
  "numpy>=2.2.6",
  "pandas>=2.3.0",
  "tabulate",
  "mpmath>=1.3",
  "natpy"
]

keywords = ["geff", "inflation", "cosmology"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
Homepage = "https://github.com/riroro13/GEFF"
Repository = "https://github.com/riroro13/GEFF"
Changelog = "https://github.com/riroro13/GEFF/blob/main/CHANGELOG.md"
