[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmo-geff"
version = "0.1.1"
description = "The GEFF allows simulating gauge-field production during inflation using the gradient expansion formalism."
readme = "README.md"

authors = [
  { name = "Richard von Eckardstein", email = "richard.voneckardstein@uni-muenster.de" }
]

license = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
  "scipy>=1.15.0",
  "numpy>=2.2.6",
  "pandas>=2.3.0",
  "tabulate",
  "mpmath>=1.3",
  "natpy"
]

keywords = ["geff", "inflation", "cosmology"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
Homepage = "https://richard-von-eckardstein.github.io/GEFF/geff.html"
Repository = "https://github.com/richard-von-eckardstein/GEFF"
Changelog = "https://github.com/richard-von-eckardstein/GEFF/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
my_package = ["*.dat"]
